--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,4 +40,4 @@ jobs:
         pylint $(git ls-files '*.py')
     - name: Test with pytest
       run: |
-        pytest --exit-zero
+        pytest --fail-on=E
